[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cfsolver"
version = "0.2.0"
description = "Cloudflare Solver - HTTP client with automatic challenge bypass"
readme = "README.md"
authors = [
    {name = "CloudFlyer Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pywssocks>=1.5.0",
    "curl_cffi>=0.7.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
proxy = [
    "mitmproxy>=10.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.0",
]
all = [
    "mitmproxy>=10.0.0",
]

[project.scripts]
cfsolver = "cfsolver.cli:main"

[project.urls]
Homepage = "https://github.com/cloudflyer/cloudflyer"
Repository = "https://github.com/cloudflyer/cloudflyer"

[tool.setuptools]
packages = ["cfsolver"]
